Fix(web): Use gap in Stack with spacing and without dividers #DS-880
We don't need to use padding if there are no dividers. Revert to use
the gap in default hasSpacing Stack.

--- a/packages/web/src/scss/components/Stack/_theme.scss
+++ b/packages/web/src/scss/components/Stack/_theme.scss
@@ -1,4 +1,4 @@
 @use '@tokens' as tokens;
 
 $border: tokens.$border-width-100 tokens.$border-style-100 tokens.$border-secondary-default;
-$padding-block: tokens.$space-600;
+$gap: tokens.$space-600;
